# cargo-fetcher

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.ci/: prep_deploy.sh
.github/scripts/: package.sh
.github/workflows/: ci.yml
src/: backends.rs  cargo.rs  fetch.rs  git.rs  lib.rs  main.rs  mirror.rs  sync.rs  upload.rs  util.rs
src/backends/: blob.rs  fs.rs  gcs.rs  mod.rs  s3.rs
src/backends/blob/: vendor.rs
src/cmds/: main.rs  mirror.rs  mod.rs  sync.rs
src/fetch/: git.rs  sparse.rs
tests/: diff_cargo.rs  lock.rs  pretty-crate.txt  run_tests.sh  sync_crates_io.rs  sync_git.rs  tutil.rs  unpretty-wasi.txt  util.rs
tests/full/: Cargo.toml
