[package]
name = "cargo-fetcher"
version = "0.14.3"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
description = "🎁 Alternative to cargo fetch"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cargo-fetcher"
homepage = "https://github.com/EmbarkStudios/cargo-fetcher"
repository = "https://github.com/EmbarkStudios/cargo-fetcher"
keywords = ["fetch", "gcs", "s3"]
categories = ["development-tools::cargo-plugins"]
readme = "README.md"

[[bin]]
name = "cargo-fetcher"
path = "src/cmds/main.rs"

[features]
default = []
gcs = ["tame-gcs", "tame-oauth"]
s3 = ["rusty-s3"]
blob = ["base64", "quick-xml"]

[profile.release]
strip = "debuginfo"

[dependencies]
# Ergonomic error handling
anyhow = "1.0"
async-scoped = { version = "0.7", features = ["use-tokio"] }
async-trait = "0.1"
base64 = { version = "0.21", optional = true }
bytes = "1.0"
camino = "1.1"
clap = { version = "4.0", features = ["derive", "env"] }
crossbeam-channel = "0.5"
flate2 = { version = "1.0", default-features = false, features = [
    "rust_backend",
] }
home = "0.5"
http = "0.2"
memchr = "2.3"
rayon = "1.5"
remove_dir_all = "0.8"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
    # We could do this manually, but..meh
    "gzip",
] }
ring = "0.16"
rusty-s3 = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive", "rc"] }
quick-xml = { version = "0.27", features = ["serialize"], optional = true }
tame-gcs = { version = "0.12", optional = true }
tame-index = { version = "0.3", features = ["git", "sparse"] }
tame-oauth = { version = "0.9", features = ["gcp"], optional = true }
tar = "0.4"
tempfile = "3.1"
time = { version = "0.3", features = ["formatting", "macros"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.2", features = ["serde"] }
walkdir = "2.3"
zstd = "0.12"

[dependencies.gix]
version = "0.51"
features = [
    "max-performance-safe",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
]

[dependencies.tokio]
version = "1.4"
features = ["rt-multi-thread", "macros"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
similar-asserts = "1.2"
twox-hash = { version = "1.6", default-features = false }
walkdir = "2.3"

[[test]]
name = "sync_crates_io"
path = "tests/sync_crates_io.rs"

[[test]]
name = "sync_git"
path = "tests/sync_git.rs"

[[test]]
name = "diff_cargo"
path = "tests/diff_cargo.rs"

[profile.dev.build-override]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
