[package]
name = "full"
version = "0.1.0"
authors = ["Jake Shadle <jake.shadle@embark-studios.com>"]
edition = "2018"

[dependencies]
# regular basic crate
tame-oauth = "=0.4.2"
# contains several crates, which is important when patching, as they will share
# the same db/checkout dir
cpal = { version = "0.13.5" }
# this repo contains recursive submodules
sentry-contrib-breakpad = { git = "https://github.com/EmbarkStudios/sentry-contrib-rust", rev = "5e10bd5ad" }

[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "971c46346" }
